# finlog

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/credit/: design_plan.md
docs/credit/schema/: amex_schema.md  intermediate_schema.md  visa_schema.md  zaim_schema.md
docs/tax/: acquisition_cost_calculation.md  design_plan.md
docs/tax/schema/: input_schemas.md
finlog/: __init__.py  cli.py  config.py
finlog/io/: __init__.py  csv_reader.py  sheets_writer.py
finlog/matching/: __init__.py  engine.py  merchant_map.json
finlog/matching/strategies/: __init__.py  base.py  contains_strategy.py
finlog/models/: tax.py  transaction.py
finlog/parsers/: amex.py  base.py  tax.py  visa.py  zaim.py
finlog/tax/: engine.py  fx_provider.py
tests/: test_amex_parser.py  test_base_parser.py  test_cli.py  test_csv_reader.py  test_harness.py  test_matching_engine.py  test_sheets_writer.py  test_tax_cli.py  test_tax_engine.py  test_tax_parsers.py  test_transaction_models.py  test_visa_parser.py  test_zaim_parser.py
