[project]
name = "finlog"
version = "0.1.0"
description = "Helper tools for personal finance log verification and credit card reconciliation"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "click>=8.0.0",
    "chardet>=5.0.0",
    "gspread>=5.0.0",
    "google-auth>=2.0.0",
]

[project.scripts]
finlog = "finlog.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["finlog*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
